# multimodal-examples

./: README.md  pyproject.toml
src/multimodal_examples/: __init__.py  utils.py
src/multimodal_examples/inference/: stacking.py
src/multimodal_examples/model/: dual_moon.py
src/notebooks/: stacking.ipynb
